docs: updated changes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Student Site</title>
 </head>
 <body>
-    Hi! I am Sunayana 
+    Hi! I am Sunayana , I am a positive visionist, I love reading books
 </body>
 </html>
