update details of project

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Student Site</title>
 </head>
 <body>
-    Hi! I am Sunayana , I am a positive visionist, I love reading books
+    Hi! I am Sunayana , I am a positive visionist, I love reading books.
+
+    I have worked on many CLI apps,I will showcase it here tomorrow.
 </body>
 </html>
